feat: Minor naming refactoring and grpc improve
